--- a/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
+++ b/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IOCompletionPort.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -27,6 +24,12 @@
       <Filter>헤더 파일</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="IOCP.h">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="IOCP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
