--- a/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
+++ b/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
@@ -13,27 +13,39 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ServerNetwork">
+      <UniqueIdentifier>{c9dbc863-fb5c-453c-bb52-348136a887c6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Define.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="EchoServer.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Define.h">
+      <Filter>ServerNetwork</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientInfo.h">
+      <Filter>ServerNetwork</Filter>
+    </ClInclude>
+    <ClInclude Include="Packet.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="IOCP.h">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="IOCP.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>ServerNetwork</Filter>
+    </ClCompile>
+    <ClCompile Include="IOCP.h">
+      <Filter>ServerNetwork</Filter>
     </ClCompile>
     <ClCompile Include="EchoServer.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ClientInfo.cpp">
+      <Filter>ServerNetwork</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
