--- a/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
+++ b/IOCP Tutorial/IOCP Tutorial.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Packet.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -46,6 +49,9 @@
     </ClCompile>
     <ClCompile Include="ClientInfo.cpp">
       <Filter>ServerNetwork</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>헤더 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
