패킷 먼저 정의 요함

--- a/IOCP Tutorial/IOCP Tutorial.vcxproj
+++ b/IOCP Tutorial/IOCP Tutorial.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChatServer.h" />
     <ClInclude Include="ClientInfo.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="EchoServer.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ChatServer.cpp" />
     <ClCompile Include="ClientInfo.cpp" />
     <ClCompile Include="EchoServer.cpp" />
     <ClCompile Include="IOCP.cpp" />
